No meio da análise semântica ainda, mas gramática e getTre foram alterados

--- a/Analisador/index.html
+++ b/Analisador/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="js/dfa.js"></script>
 		<script type="text/javascript" src="js/pda.js"></script>
 		<script type="text/javascript" src="js/arbLex.js"></script>
+		<script type="text/javascript" src="js/semantics.js"></script>
 		<script type="text/javascript" src="js/analyzeCode.js"></script>
 		<script type="text/javascript" src="js/getTree.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
